# swc-plugin-jsx-dom-expressions

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain
.cargo/: config
src/: config.rs  dom.rs  lib.rs  shared.rs
src/dom/: constants.rs  element.rs  template.rs
src/shared/: component.rs  constants.rs  fragment.rs  structs.rs  transform.rs  utils.rs
tests/: fixture.rs
tests/fixture/a/: input.js  output.js
tests/fixture/b/: input.js  output.js
tests/fixture/babel-components/: code.js  output.js
tests/fixture/babel/SVG/: code.js  output.js
tests/fixture/babel/attribute-expressions/: code.js  output.js
tests/fixture/babel/components/: code.js  output.js
tests/fixture/babel/conditional-expressions/: code.js  output.js
tests/fixture/babel/custom-elements/: code.js  output.js
tests/fixture/babel/event-expressions/: code.js  output.js
tests/fixture/babel/fragments/: code.js  output.js
tests/fixture/babel/insert-children/: code.js  output.js
tests/fixture/babel/namespace-elements/: code.js  output.js
tests/fixture/babel/simple-elements/: code.js  output.js
tests/fixture/babel/text-interpolation/: code.js  output.js
tests/fixture/basic-attributes/: input.js  output.js
tests/fixture/basic-component/: input.js  output.js
tests/fixture/basic-jsx/: output.js
tests/fixture/builtin-components/: input.js  output.js
tests/fixture/c/: input.js
tests/fixture/closure-event/: input.js  output.js
tests/fixture/component-with-children/: input.js  output.js
tests/fixture/d/: input.js  output.js
tests/fixture/e/: output.js
tests/fixture/expr-attributes/: input.js  output.js
tests/fixture/jsx-comments/: output.js
tests/fixture/jsx-memeber-expressions/: input.js  output.js
tests/fixture/literal-event/: input.js  output.js
tests/fixture/mixed-component-element/: input.js  output.js
tests/fixture/multiple-templates/: input.js  output.js
tests/fixture/namespaced-elements/: input.js  output.js
tests/fixture/ref/: input.js  output.js
tests/fixture/self-closing-element/: output.js
tests/fixture/string-attributes-in-container/: input.js
tests/fixture/string-children-in-container/: input.js  output.js
tests/fixture/style/: input.js  output.js
tests/fixture/svg/: input.js  output.js
tests/fixture/void-element/: output.js
