[package]
name = "jsx-dom-expressions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
convert_case = "0.6.0"
html-escape = "0.2.13"
once_cell = "1.19.0"
regex = "1.10.5"
getrandom = { version = "0.2", features = ["js"] } # needed to set js feature of sub-dependency
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
swc_core = { version = "0.99.5", features = [
    "common",
    "ecma_ast",
    "ecma_minifier",
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "swc_atoms",
] }

[dev-dependencies]
swc_core = { version = "0.99.5", features = [
    "ecma_parser",
    "testing_transform",
] }
testing = "0.38.1"
