[package]
name = "jsx-dom-expressions"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
convert_case = "0.8.0"
html-escape = "0.2.13"
once_cell = "1.19.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
swc_core = { version = "33.0", features = [
    "common",
    "ecma_ast",
    "ecma_minifier",
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "swc_atoms",
] }
rustc-hash = "2.1.1"

[dev-dependencies]
swc_core = { version = "33.0", features = [
    "ecma_parser",
    "testing_transform",
] }
testing = "15.0"
