[package]
name = "jsx-dom-expressions"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
convert_case = "0.10.0"
html-escape = "0.2.13"
once_cell = "1.21"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_core = { version = "53.0", features = [
    "common",
    "ecma_ast",
    "ecma_minifier",
    "ecma_plugin_transform",
    "ecma_quote",
    "ecma_utils",
    "ecma_visit",
    "swc_atoms",
] }
rustc-hash = "2.1"

[dev-dependencies]
swc_core = { version = "53.0", features = ["ecma_parser", "testing_transform"] }
testing = "19.0"
